2013-08-14  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* .bzrignore: Add bootinfo.txt, grub.chrp, gnulib/float.h, and
	remove-potcdate.sed.

2013-08-14  Andrey Borzenkov <arvidjaar@gmail.com>

	*  grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_iterate): Remove
	unused attribute from pull argument.

2013-08-14  Andrey Borzenkov <arvidjaar@gmail.com>

	*  util/getroot.c (grub_util_is_imsm): Fix descriptor and
	memory leak.

2013-08-14  Andrey Borzenkov <arvidjaar@gmail.com>

	*  util/getroot.c (pull_lvm_by_command): add --separator option
	to vgs call to disable padding of output to 10 characters.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c (grub_device_mapper_supported): Move from
	here ...
	* grub-core/kern/emu/hostdisk.c (grub_device_mapper_supported): ... to
	here.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/pc/biosdisk.h (grub_biosdisk_drp): Fix device_path
	length.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of build-time grub-bin2h and grub-mkfont when doing
	full Canadian cross. Tested with build=x86_64, host=arm,
	target=ppc-ieee1275.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Error if no $BUILD_CC could be found.
	Reported by: DevHC.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/coreboot/init.c: Fix compilation on
	i386-multiboot.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/vga_init.c: Fix compilation on qemu-mips.
	* grub-core/kern/mips/qemu_mips/init.c: Likewise.

2013-08-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev): Zero out
	grub_errno in the case where we handle GRUB_ERR_UNKNOWN_DEVICE by
	falling back to the partition device, otherwise a later call to this
	function may fail spuriously.
	Reported by Axel Beckert.  Fixes Debian bug #708614.

2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>
